[package]
name = "blake-streams"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
bao = "0.10.1"
fnv = "1.0.7"
parking_lot = "0.11.1"
rkyv = "0.6.7"
sled = "0.34.6"

[dev-dependencies]
rand = "0.8.4"
tempdir = "0.3.7"

[patch.crates-io]
bao = { path = "../bao" }
