[workspace]
members = ["core", "libp2p", "."]

[profile.release]
debug = true

[package]
name = "blake-streams"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Performant authenticated replicated streams."
repository = "https://github.com/ipfs-rust/blake-streams"
license = "ISC"

[dependencies]
anyhow = "1.0.41"
async-global-executor = "2.0.2"
blake-streams-core = { version = "0.1.0", path = "core" }
futures = "0.3.15"
ipfs-embed = { git = "https://github.com/ipfs-rust/ipfs-embed" }
tracing = "0.1.26"
zerocopy = "0.5.0"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
rand = "0.8.4"
tempdir = "0.3.7"
tracing-subscriber = "0.2.18"
