[package]
name = "blake-streams-core"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[features]
serde-derive = ["serde", "serde-big-array"]

[dependencies]
anyhow = "1.0.41"
bao = { version = "0.10.1", git = "https://github.com/dvc94ch/bao", branch = "append" }
base64 = "0.13.0"
ed25519-dalek = "1.0.1"
fnv = "1.0.7"
parking_lot = "0.11.1"
rkyv = "0.7.0"
serde = { version = "1.0.126", features = ["derive"], optional = true }
serde-big-array = { version = "0.3.2", features = ["const-generics"], optional = true }
sled = "0.34.6"
tracing = "0.1.26"
zerocopy = "0.5.0"

[dev-dependencies]
criterion = "0.3.4"
rand = "0.8.4"
tempdir = "0.3.7"

[[bench]]
name = "sync"
harness = false
