[package]
name = "libp2p-blake-streams"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
blake-streams = { path = "..", features = ["serde-derive"] }
fnv = "1.0.7"
futures = "0.3.15"
libp2p = { version = "0.39.0", default-features = false, features = ["streaming-response"], path = "../../rust-libp2p" }
serde = "1.0.126"
tracing = "0.1.26"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
futures = "0.3.15"
libp2p = { version = "0.39.0", path = "../../rust-libp2p" }
rand = "0.8.4"
tempdir = "0.3.7"
tracing-subscriber = "0.2.18"
